// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`disreact/SourceRegistry > when checking out a root 1`] = `
{
  "_tag": "Ephemeral",
  "elem": {
    "id": "TestMessage",
    "idn": "TestMessage",
    "idx": undefined,
    "nodes": [],
    "props": {},
    "strand": {
      "pc": 0,
      "queue": [],
      "rc": 0,
      "saved": [],
      "stack": [],
    },
    "type": [Function],
  },
  "id": "TestMessage",
  "nexus": {
    "id": "TestMessage",
    "next": {
      "id": "TestMessage",
      "props": {},
    },
    "props": {},
    "queue": [],
    "root": [Circular],
    "strands": {
      "TestMessage": {
        "pc": 0,
        "queue": [],
        "rc": 0,
        "saved": [],
        "stack": [],
      },
    },
  },
}
`;

exports[`disreact/SourceRegistry > when cloning a root 1`] = `
{
  "id": "TestMessage",
  "idn": "TestMessage",
  "idx": undefined,
  "nodes": [],
  "props": {},
  "strand": {
    "pc": 0,
    "queue": [],
    "rc": 0,
    "saved": [],
    "stack": [],
  },
  "type": [Function],
}
`;
